# gazebo-testing

./: .dockerignore  .gitignore  .secrets.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  launch_nav2.sh  record_topics.sh  start_kasm.sh
.github/workflows/: colcon-build.yml  docker-build-push.yml
coscene/layout/: Gazebo RMUL2024.json
coscene/matrix/: config.yaml
coscene/records/case1/config/: test_points.yaml
coscene/records/case1/maps/: map.pgm
coscene/records/case1/param/: case.yaml
coscene/records/case1/worlds/: RMUL2024_world_dynamic_obstacles.world
coscene_recorder/: setup.cfg
coscene_recorder/config/: recorder_config.yaml
coscene_recorder/launch/: record.launch.py
coscene_recorder/recorder/: recorder.py
docker/: Dockerfile  Dockerfile.desktop  Dockerfile.kasm  entrypoint.sh  ros_entrypoint.sh
layout/: Gazebo RMUL2024.json
marker_publisher/: package.xml  setup.py
marker_publisher/launch/: marker.launch.py
marker_publisher/marker_publisher/: marker_publisher.py  markers.py  mesh_server.py
marker_publisher/param/: default.yaml
nav_test/launch/: test_nav.launch.py  turtlebot3_world.launch.py
nav_test/nav_test/: nav_controller.py
nav_test/param/: waffle_pi.yaml
node_lister/: package.xml
node_lister/node_lister/: node_lister.py
node_msgs/: CMakeLists.txt  package.xml
node_msgs/msg/: NodeList.msg
records/case1/config/: model.yaml
records/case1/maps/: map.yaml
records/case1/models/RMUL2024_world/: model.sdf
records/case1/models/turtlebot3_waffle_pi/: model.sdf
ros2_ws/sim_map/20250314/: normal.yaml
ros2_ws/src/: ros_bag_recorder.py
ros2_ws/src/coscene_recorder/: package.xml  setup.py
ros2_ws/src/coscene_recorder/config/: recorder_config.yaml
ros2_ws/src/coscene_recorder/launch/: record.launch.py
ros2_ws/src/coscene_recorder/recorder/: recorder.py
ros2_ws/src/integration-test/: package.xml
ros2_ws/src/integration-test/launch/: record.launch.py
ros2_ws/src/nav_test/: package.xml  setup.cfg  setup.py
ros2_ws/src/nav_test/config/: test_points.yaml
ros2_ws/src/nav_test/launch/: test_nav.launch.py  turtlebot3_world.launch.py
ros2_ws/src/nav_test/nav_test/: nav_controller.py  ros_utils.py
ros2_ws/src/nav_test/param/: waffle_pi.yaml
ros2_ws/src/node_lister/: package.xml  setup.cfg  setup.py
ros2_ws/src/node_lister/node_lister/: node_lister.py
ros2_ws/src/node_msgs/msg/: NodeStatus.msg
ros2_ws/src/recorder/: recorder.py  recorder_config.yaml.example
ros2_ws/src/recorder/launch/: launch.py
ros2_ws/src/stl_visualizer/: package.xml  setup.cfg  setup.py
ros2_ws/src/stl_visualizer/launch/: visualize.launch.py
ros2_ws/src/stl_visualizer/stl_visualizer/: stl_publisher.py
ros2_ws/src/turtlebot3/turtlebot3_navigation2/param/: waffle_pi.yaml
ros2_ws/src/turtlebot3_simulations/turtlebot3_gazebo/launch/: turtlebot3_world.launch.py
ros2_ws/src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: world1.world
scripts/: build.sh  kasm-vnc.service  ros_entrypoint.sh  run.sh
turtlebot3_ws_my/: ros_bag_recorder.py
turtlebot3_ws_my/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
turtlebot3_ws_my/install/nav_test/share/nav_test/: package.sh  package.xml
turtlebot3_ws_my/install/nav_test/share/nav_test/config/: test_points.yaml
turtlebot3_ws_my/install/nav_test/share/nav_test/launch/: test_nav.launch.py
turtlebot3_ws_my/log/: latest_build
turtlebot3_ws_my/src/: nav_loop.py
(+31 files in other folders)
