<?xml version="1.0"?>
<package format="3">
  <name>node_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages for the node_lister package.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- 依赖项 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 如果 msg 依赖 std_msgs 等，也要加上 -->
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- 用于消息构建 -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <!-- 添加这个缺失的export标签 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>